--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ ul li {
 li a {
   text-decoration: none;
   color: #56261a;
+  transition: all 0.5s;
+}
+li a:hover {
+  background-color: #dc853d;
+  padding: 0 30px;
+  color: #fff;
 }
 .align {
   display: flex;
@@ -30,6 +36,12 @@ li a {
 ul {
   display: flex;
   gap: 20px;
+}
+.img-titlu {
+  transition: all 0.5s;
+}
+.img-titlu:hover {
+  opacity: 0.83;
 }
 .titlu {
   margin: 30px 0 30px 0;
@@ -60,4 +72,9 @@ cite {
   color: black;
   text-transform: uppercase;
   font-weight: 600;
+}
+.btn {
+  position: absolute;
+  top: 700px;
+  right: 720px;
 }
